--- a/client/css/gameInterface/resource.css
+++ b/client/css/gameInterface/resource.css
@@ -104,3 +104,11 @@
 .resource-color-oil{
   color: #454758;
 }
+
+
+.resource-bg-color-petrol{
+  background-color: #AC3E32;
+}
+.resource-color-petrol{
+  color: #AC3E32;
+}
