--- a/client/css/gameInterface/path.css
+++ b/client/css/gameInterface/path.css
@@ -41,3 +41,99 @@
   /* transform: rotateX(15deg); */
 
 }
+
+
+
+
+#pathSection_neadersContainer{
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  pointer-events: none;
+  display: block;
+}
+
+
+.pathSection_neadersContainer-item{
+  width: 50px;
+  height: 60px;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition-duration: 0.1s;
+}
+.pathSection_neadersContainer-item-city{
+  width: 110px;
+  height: 60px;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition-duration: 0.1s;
+}
+.pathSection_neadersContainer-iconBox{
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  background-color: #FAF9F8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid #303030;
+  pointer-events: auto;
+}
+.pathSection_neadersContainer-iconBox-city{
+  width: 50px;
+  height: 50px;
+  background-color: #FAF9F8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.pathSection_neadersContainer-icon{
+  width: 80%;
+  height: 80%;
+  background-size: cover;
+}
+.pathSection_neadersContainer-item::after{
+  content: '';
+  border-left: 12px solid transparent;
+  border-right: 12px solid transparent;
+  border-bottom: 12px solid #303030;
+  transform: rotate(180deg);
+  position: relative;
+  z-index: -1;
+  top: -3px;
+}
+.pathSection_neadersContainer-item-city::after{
+  content: '';
+  border-left: 12px solid transparent;
+  border-right: 12px solid transparent;
+  border-bottom: 12px solid rgba(0, 0, 0, 0.5);
+  transform: rotate(180deg);
+  position: relative;
+  z-index: -1;
+}
+
+.pathSection_neadersContainer-cityContainer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: auto;
+  border-radius: 15px;
+  /* border: 1px solid #D7355C; */
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.pathSection_neadersContainer-price{
+  width: 60px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  color: white;
+  font-size: 16px;
+  font-family: 'Roboto Condensed';
+  justify-content: center;
+  text-shadow: 0px 0px 4px black;
+};
