--- a/client/css/gameInterface/icons.css
+++ b/client/css/gameInterface/icons.css
@@ -7,7 +7,17 @@
 .icon-truck{
   background-image: url(../img/icons/truck.png);
 }
-
+.icon-delivery{
+  background-image: url(../img/icons/delivery.png);
+}
+.icon-money{
+  background-image: url(../img/icons/money.png);
+}
 .icon-table{
   background-image: url(../img/icons/table.png);
+}
+
+
+.icon-move{
+  background-image: url(../img/icons/move.png);
 }
