--- a/client/css/gameInterface/path.css
+++ b/client/css/gameInterface/path.css
@@ -26,20 +26,54 @@
   width: 160px;
   position: fixed;
   transform: translate(-50%,-50%);
-  height: 60px;
-  justify-content: space-around;
-  perspective: 100px;
-  -webkit-perspective:100px;
+  height: 50px;
+  z-index: 10;
 
 }
-.pathSection_buttons{
-  width: 60px;
+.pathSection_buttons-spaceHolder-city{
+  width: 55px;
+  height: 50px;
+  margin-right: 10px;
   flex:0 0 auto;
-  height: 60px;
-  border-radius: 60px;
-  opacity: 0.9;
-  /* transform: rotateX(15deg); */
+}
+.pathSection_buttons-spaceHolder-factory{
+  width: 25px;
+  height: 50px;
+  margin-right: 10px;
+  flex:0 0 auto;
+}
+.pathSection_buttons-spaceHolder-none{
+  width: 0px;
+  height: 50px;
+  /* margin-right: 10px; */
+  flex:0 0 auto;
+}
 
+.pathSection_buttons{
+  width: 50px;
+  flex:0 0 auto;
+  height: 50px;
+  background-color: #FAF9F8;
+  border-radius: 50px;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 0px 5px black;
+  /* transform: rotateX(15deg); */
+}
+.pathSection_buttons:hover{
+  background-color: #A3D735;
+}
+.pathSection_buttons-noSpaceHolder{
+  position: relative;
+  left: -25px;
+}
+.pathSection_buttons_icon{
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 
@@ -61,7 +95,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  transition-duration: 0.1s;
+  transition-duration: 0.05s;
 }
 .pathSection_neadersContainer-item-city{
   width: 110px;
@@ -70,7 +104,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  transition-duration: 0.1s;
+  transition-duration: 0.05s;
 }
 .pathSection_neadersContainer-iconBox{
   width: 50px;
@@ -80,21 +114,30 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 2px solid #303030;
+  /* border: 2px solid #303030; */
   pointer-events: auto;
+  border-radius: 50px 50px 0px 50px;
+  transform: rotate(45deg);
+  box-shadow: 0px 0px 5px black;
 }
 .pathSection_neadersContainer-iconBox-city{
   width: 50px;
   height: 50px;
-  background-color: #FAF9F8;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.pathSection_neadersContainer-icon-city{
+  width: 80%;
+  height: 80%;
+  background-size: cover;
+  /* transform: rotate(-45deg); */
 }
 .pathSection_neadersContainer-icon{
   width: 80%;
   height: 80%;
   background-size: cover;
+  transform: rotate(-45deg);
 }
 .pathSection_neadersContainer-item::after{
   content: '';
@@ -110,10 +153,10 @@
   content: '';
   border-left: 12px solid transparent;
   border-right: 12px solid transparent;
-  border-bottom: 12px solid rgba(0, 0, 0, 0.5);
+  border-bottom: 12px solid #FAF9F8;
   transform: rotate(180deg);
   position: relative;
-  z-index: -1;
+  top: -1px;
 }
 
 .pathSection_neadersContainer-cityContainer{
@@ -121,19 +164,20 @@
   align-items: center;
   justify-content: center;
   pointer-events: auto;
-  border-radius: 15px;
+  border-radius: 50px;
   /* border: 1px solid #D7355C; */
   overflow: hidden;
-  background-color: rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 5px black;
+  background-color: #FAF9F8;
 }
 .pathSection_neadersContainer-price{
   width: 60px;
   height: 100%;
   display: flex;
   align-items: center;
-  color: white;
+  color: #303030;
   font-size: 16px;
   font-family: 'Roboto Condensed';
   justify-content: center;
-  text-shadow: 0px 0px 4px black;
+  /* text-shadow: 0px 0px 4px black; */
 };
