--- a/client/css/gameInterface/factory.css
+++ b/client/css/gameInterface/factory.css
@@ -1,4 +1,10 @@
+/*
+  red #D7355C
+  card #FAF9F8
+  green #A3D735
 
+
+ */
 #factorySection{
   width: 100vw;
   height: 100vh;
@@ -211,31 +217,6 @@
     margin-top: 5px;
     background-color: red;
   }
-  .factory_footer{
-    width: 100%;
-    height: 75%;
-    background-color:#FAF9F8;
-    position: relative;
-    top:-12.5%;
-    overflow: hidden;
-    padding: 0px 10px;
-    transition-duration: 0.4s;
-    border-radius: 20px 20px 0px 0px;
-    box-shadow: 0px 0px 8px rgb(0, 0, 0, 0.5);
-  }
-
-  .factory_footer:hover{
-    top:-79%;
-  }
-    .factory_footer_header{
-      align-items: center;
-      display: flex;
-      font-size: 12px;
-      justify-content: center;
-      width: 100%;
-      height: 10%;
-      color:#D7355C;
-    }
 
 
 
@@ -497,5 +478,110 @@
   font-size: 10px;
   padding-left: 5px;
   text-shadow: 0px 0px 4px black;
+
+}
+
+.factory_footer{
+  width: 100%;
+  height: 75%;
+  background-color:#FAF9F8;
+  position: relative;
+  top:-12.5%;
+  overflow: hidden;
+  padding: 0px 10px;
+  transition-duration: 0.4s;
+  border-radius: 20px 20px 0px 0px;
+  box-shadow: 0px 0px 8px rgb(0, 0, 0, 0.5);
+}
+
+.factory_footer:hover{
+  top:-79%;
+}
+  .factory_footer_header{
+    align-items: center;
+    display: flex;
+    font-size: 12px;
+    justify-content: center;
+    width: 100%;
+    height: 10%;
+    margin-bottom: 5px;
+    color:#D7355C;
+  }
+
+.factory_footer_body{
+  width: 100%;
+  height: 80%;
+}
+.factory_footer_body_line{
+  width: 100%;
+  height: 30px;
+  margin-bottom: 5px;
+  box-shadow: 0px 2px 3px rgba(0,0,0,0.4);
+  border-radius: 40px;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+.factory_footer_body_line-icon{
+  margin: 0px 5px;
+  width: 25px;
+  height: 25px;
+  background-size: cover;
+
+}
+.factory_footer_body_line_buttonsContainer{
+  width:115px;
+  height: 30px;
+  display: flex;
+}
+.factory_footer_body_line_buttonsContainer-button{
+  width: 50%;
+  height: 100%;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+.factory_footer_body_line_buttonsContainer-button:hover{
+  background-color:#A3D735;
+}
+
+.factory_footer_body_line_buttonsContainer-icon{
+  width: 30px;
+  height: 30px;
+  background-size: cover;
+}
+.factory_footer_body_line-body{
+  width: 90px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+}
+.factory_footer_body_line-cancelButton{
+  width: 25px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #D7355C;
+  color:white;
+}
+.factory_footer_body_line-iconMode{
+  width: 25px;
+  height: 25px;
+  margin-right: 5px;
+  background-size: cover;
+}
+.factory_footer_body_line-direction{
+  width: 60px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  color:#303030;
+  font-size: 8px;
+  font-weight: normal;
+  font-family: 'Roboto Condensed';
+  letter-spacing: -0.05em;
+  text-align: center;
 
 }
