--- a/client/css/gameInterface/factory.css
+++ b/client/css/gameInterface/factory.css
@@ -75,10 +75,27 @@
       font-family: 'Roboto Condensed';
       color: white;
       text-shadow: 0px 0px 10px black;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
     .factory_header_header-span{
       /* text-transform: uppercase; */
       font-weight: bold;
+    }
+    .factory_header_header-buttonsContainer{
+      width: 45px;
+      height: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .factory_header_header-button{
+      width: 20px;
+      height: 20px;
+      background-size: cover;
+      -webkit-filter: drop-shadow(0px 0px 5px black);
+      filter: drop-shadow(0px 0px 5px black);
     }
     .factory_header_body{
       display: flex;
