--- a/client/css/gameInterface/auth.css
+++ b/client/css/gameInterface/auth.css
@@ -1,11 +1,12 @@
-#authSection{
+#authSection {
   width: 100vw;
   height: 100vh;
   position: fixed;
   pointer-events: auto;
-  background: linear-gradient(180deg, rgba(197,144,152,1) 35%, rgba(76,86,80,1) 100%);
+  background: linear-gradient(180deg, rgba(197, 144, 152, 1) 35%, rgba(76, 86, 80, 1) 100%);
 }
-.authSection-background{
+
+.authSection-background {
   width: 100%;
   height: 100%;
   position: fixed;
@@ -15,25 +16,24 @@
   filter: blur(5px) contrast(120%);
 }
 
-.authContainer{
+.authContainer {
   background-color: rgba(48, 48, 48, 0.3);
   display: flex;
   padding: 20px;
   position: fixed;
   left: 50%;
-  top:50%;
-  transform: translate(-50%,-50%);
+  top: 50%;
+  transform: translate(-50%, -50%);
   box-shadow: 0px 0px 20px black;
-
 }
-#auth{
+
+#auth {
   margin: auto;
   font-family: 'Roboto Condensed', sans-serif;
 }
 
-.authInput{
-
-  display:block;
+.authInput {
+  display: block;
   -webkit-user-select: initial;
   -khtml-user-select: initial;
   -moz-user-select: initial;
@@ -42,8 +42,6 @@
   color: white;
   font-weight: bold;
   padding-left: 10px;
-
-
   margin-bottom: 10px;
   background-color: rgba(201, 233, 255, 0.2);
   border: none;
@@ -52,9 +50,8 @@
   align-items: center;
 }
 
-.authButton{
+.authButton {
   text-shadow: 0px 0px 2px black;
-
   background-color: rgba(48, 48, 48, 0.5);
   text-transform: uppercase;
   color: white;
@@ -63,43 +60,44 @@
   font-size: 25px;
   padding: 10px 20px;
 }
-.auth_footer{
+
+.auth_footer {
   display: flex;
   margin-top: 10px;
   justify-content: space-between;
   flex-direction: column;
 }
-.authButton:hover{
+
+.authButton:hover {
   background-color: rgba(201, 233, 255, 0.5);
 }
-.authButton_small{
-  text-shadow: 0px 0px 2px black;
 
+.authButton_small {
+  text-shadow: 0px 0px 2px black;
   background-color: rgba(48, 48, 48, 0.5);
   text-transform: uppercase;
   color: white;
   border: none;
   font-size: 15px;
   padding: 10px 20px;
-
 }
-.authButton_small:hover{
+
+.authButton_small:hover {
   background-color: rgba(201, 233, 255, 0.5);
-
-
 }
-.auth_mainButtonContainer{
+
+.auth_mainButtonContainer {
   display: flex;
   flex-direction: column;
 }
 
-.auth_switchButtonContainer{
-  margin-top:20px;
-  display:flex;
+.auth_switchButtonContainer {
+  margin-top: 20px;
+  display: flex;
   justify-content: flex-end;
 }
 
-#login_error{
+#login_error {
   display: none;
   width: 300px;
   margin-bottom: 10px;
@@ -107,62 +105,58 @@
   color: #ff5858;
 }
 
-#password_error{
+#password_error {
   display: none;
   width: 300px;
   margin-bottom: 10px;
   font-size: 10px;
   color: #ff5858;
 }
-
-
-
-
-
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 1024px) and (-webkit-device-pixel-ratio : 2) {
 
-/* mobile and tablets */
-  .authContainer{
+  /* mobile and tablets */
+  .authContainer {
     padding: 30px;
   }
-  .authInput{
+
+  .authInput {
     font-size: 50px;
     height: 90px;
     margin-bottom: 30px;
     padding-left: 30px;
   }
 
-  .authButton{
+  .authButton {
     font-size: 50px;
     padding: 30px 40px;
   }
 
-  .auth_footer{
+  .auth_footer {
     margin-top: 50px;
   }
-  .authButton_small{
+
+  .authButton_small {
     font-size: 30px;
     padding: 30px 40px;
-
   }
-  .auth_switchButtonContainer{
+
+  .auth_switchButtonContainer {
     margin-top: 30px;
   }
 
-  #login_error{
+  #login_error {
     width: 610px;
     margin-bottom: 30px;
     font-size: 23px;
     color: #ff5858;
   }
 
-  #password_error{
+  #password_error {
     display: none;
     width: 300px;
     margin-bottom: 10px;
     font-size: 10px;
     color: #ff5858;
   }
-
 }
