--- a/client/css/gameInterface/balance.css
+++ b/client/css/gameInterface/balance.css
@@ -1,41 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,700&display=swap');
 
-#balanceSection{
+#balanceSection {
   width: 100vw;
   height: 100vh;
   pointer-events: none;
   position: fixed;
 }
 
-#balanceDiv{
+#balanceDiv {
   pointer-events: auto;
   color: white;
   font-family: 'Roboto', sans-serif;
   text-align: center;
   font-size: 1.5em;
   position: fixed;
-  top:20px;
+  top: 20px;
   left: 50%;
   transform: translateX(-50%);
   padding: 0px 10px;
-  background-color: rgba(0,0,0,0.3);
+  background-color: rgba(0, 0, 0, 0.3);
 }
-#balanceDiv_span{
-  letter-spacing: -0.05em;
 
+#balanceDiv_span {
+  letter-spacing: -0.05em;
 }
-#balanceHistoryClicker{
+
+#balanceHistoryClicker {
   pointer-events: auto;
   display: none;
   position: fixed;
   overflow: hidden;
   width: 100vw;
   height: 100vh;
-    z-index: 3;
+  z-index: 3;
 }
-#balanceHistory{
+
+#balanceHistory {
   pointer-events: auto;
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0, 0, 0, 0.4);
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
   display: none;
@@ -45,25 +47,21 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   overflow: hidden;
-
 }
 
-
-
-
-.balanceMenu-creditCard-hole{
+.balanceMenu-creditCard-hole {
   height: 24px;
   width: 12px;
   border-radius: 18px;
-
   background-color: #E1E1E1;
   box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.25);
-  flex:0 0 auto;
+  flex: 0 0 auto;
   margin-right: 3px;
 }
-.balanceMenu-creditCard-gap{
+
+.balanceMenu-creditCard-gap {
   height: 22px;
   width: 12px;
   border-radius: 18px;
@@ -74,28 +72,25 @@
   background-color: white;
 }
 
-
-
-#balanceMenu_Container{
+#balanceMenu_Container {
   pointer-events: auto;
   width: 260px;
   height: 400px;
   position: fixed;
   left: 50%;
-  top:50%;
-  transform: translate(-50%,-50%) scale(0.9);
+  top: 50%;
+  transform: translate(-50%, -50%) scale(0.9);
   padding: 5px;
 }
 
-
-#balanceMenu_CreditCard{
+#balanceMenu_CreditCard {
   width: 250px;
   height: 175px;
   margin: auto;
-  margin-bottom:5px;
+  margin-bottom: 5px;
 }
 
-#balanceMenu_Container_Amount{
+#balanceMenu_Container_Amount {
   width: 100%;
   height: 35px;
   font-size: 35px;
@@ -108,91 +103,96 @@
   justify-content: flex-end;
   margin-top: -15px;
 }
-.balanceMenu_Container_Titles{
+
+.balanceMenu_Container_Titles {
   height: 12px;
   font-size: 12px;
   font-weight: 200;
-  color:#303030;
+  color: #303030;
   font-family: 'Roboto Condensed';
   text-transform: uppercase;
   margin-bottom: 2px;
 }
-#balanceMenu_Container_DeferalPart{
+
+#balanceMenu_Container_DeferalPart {
   width: 100%;
   height: 65px;
   margin-top: -10px;
-
 }
 
-#balanceMenu_Container_PaymentsPart{
+#balanceMenu_Container_PaymentsPart {
   width: 100%;
   height: 65px;
-
 }
 
-#balanceMenu_Container_PaymentsPart_Header{
+#balanceMenu_Container_PaymentsPart_Header {
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.balanceMenu_Container_Titles_Payment{
+
+.balanceMenu_Container_Titles_Payment {
   font-size: 15px;
   font-weight: 500;
-  color:#e72c2c;
+  color: #e72c2c;
   letter-spacing: -0.05em;
 }
 
+#balanceMenu_Container_Deferral_Container {
+  width: 100%;
+  height: 52px;
+  display: flex;
+  flex-wrap: wrap;
+}
 
-#balanceMenu_Container_Deferral_Container{
+#balanceMenu_Container_Payments_Container {
   width: 100%;
   height: 52px;
   display: flex;
   flex-wrap: wrap;
 }
-#balanceMenu_Container_Payments_Container{
-  width: 100%;
-  height: 52px;
-  display: flex;
-  flex-wrap: wrap;
-}
-.balanceMenu-creditCard-DeferralHole{
-}
-.balanceMenu-creditCard-PaymentHole{
+
+.balanceMenu-creditCard-DeferralHole {}
+
+.balanceMenu-creditCard-PaymentHole {
   background-color: #ff8686;
 }
 
-
-
-#balanceMenu_balanceHistory{
+#balanceMenu_balanceHistory {
   width: 250px;
   height: 210px;
 }
-#balanceMenu_amount{
+
+#balanceMenu_amount {
   font-family: Roboto;
   font-weight: bold;
   font-size: 24px;
   letter-spacing: -0.075em;
 }
-.balanceMenu_balanceHeader{
+
+.balanceMenu_balanceHeader {
   font-family: 'Roboto Condensed';
   width: 100%;
   height: 50px;
   display: flex;
   justify-content: space-between;
 }
-.balanceMenu_balanceHeader_Left{
+
+.balanceMenu_balanceHeader_Left {
   width: 180px;
   height: 50px;
 }
-.balanceMenu_balanceHeader_Right{
+
+.balanceMenu_balanceHeader_Right {
   background-color: #303030;
   width: 50px;
   height: 50px;
 }
-.balanceMenu_balanceHeader_Loan{
+
+.balanceMenu_balanceHeader_Loan {
   padding: 0px 4px;
-  color:white;
+  color: white;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -200,29 +200,30 @@
   height: 20px;
   align-items: center;
 }
-.balanceMenu_balanceHeader_Titles{
-  font-size: 12px;
-  color:#303030;
 
+.balanceMenu_balanceHeader_Titles {
+  font-size: 12px;
+  color: #303030;
 }
 
-.balanceMenu_balanceHeader_Tax-top{
+.balanceMenu_balanceHeader_Tax-top {
   width: 50px;
   font-size: 15px;
-  color:white;
+  color: white;
   text-align: center;
   text-transform: uppercase;
 }
-.balanceMenu_balanceHeader_Tax-bottom{
+
+.balanceMenu_balanceHeader_Tax-bottom {
   width: 50px;
   font-size: 28px;
-  color:white;
+  color: white;
   text-align: center;
   font-weight: bold;
   letter-spacing: -0.05em;
 }
 
-#balanceMenu_balanceList{
+#balanceMenu_balanceList {
   width: 100%;
   background-color: #DDDDDD;
   height: 95px;
@@ -231,7 +232,7 @@
   font-size: 10px;
 }
 
-.balanceMenu_balanceList-item{
+.balanceMenu_balanceList-item {
   display: flex;
   align-items: center;
   justify-content: space-between;
