--- a/client/css/gameInterface/card.css
+++ b/client/css/gameInterface/card.css
@@ -1,22 +1,12 @@
-
-
-
-.card{
+.card {
   padding: 8px;
-  box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
-  background-color:#EAEAEA;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  background-color: #EAEAEA;
   font-family: 'Roboto', sans-serif;
-  color:#303030;
-
-
-  /* background-color:rgba(255, 255, 255,0.4);
-
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px); */
+  color: #303030;
 }
 
-
-.card-header{
+.card-header {
   width: 100%;
   height: 10px;
   text-transform: uppercase;
@@ -26,15 +16,9 @@
   display: flex;
   align-items: center;
   margin-bottom: 8px;
-
-
-  /* padding-left: 8px;
-  background-color:#303030;
-  color:#EAEAEA; */
 }
 
-.card-header-span{
+.card-header-span {
   font-weight: 700;
-
   margin-left: 3px;
 }
