--- a/client/css/gameInterface/factory.css
+++ b/client/css/gameInterface/factory.css
@@ -5,267 +5,250 @@
 
 
  */
-#factorySection{
+#factorySection {
   width: 100vw;
   height: 100vh;
   pointer-events: none;
   position: fixed;
   z-index: 1;
 }
-/* .factoryMenu_cardBackground_sawmill{
-  background-image: url(../img/factoryCards/sawmill.jpg);
-} */
-#factoryMenuClicker{
+
+#factoryMenuClicker {
   pointer-events: auto;
   display: block;
   position: fixed;
   overflow: hidden;
   width: 100vw;
   height: 100vh;
-
 }
-#factoryMenu{
-  /* position: fixed; */
-  /* font-family: 'Roboto Condensed', sans-serif;
-  color: white;
-  border-radius: 10px;*/
+
+#factoryMenu {
   width: 100%;
   height: 100%;
   pointer-events: none;
   perspective: 500px;
-  -webkit-perspective:500px;
+  -webkit-perspective: 500px;
 }
 
-
-.factory_card{
+.factory_card {
   pointer-events: auto;
   width: 170px;
   height: 250px;
   position: fixed;
-  top:50%;
-  left:50%;
-  -webkit-transform:translate(-150%,-50%) scale(1.5) rotateY(10deg);
-  transform:translate(-150%,-50%) scale(1.5) rotateY(10deg);
-
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-150%, -50%) scale(1.5) rotateY(10deg);
+  transform: translate(-150%, -50%) scale(1.5) rotateY(10deg);
   overflow: hidden;
-
   border-radius: 10px;
-
   box-shadow: 0px 0px 10px black;
-
   font-family: 'Roboto Condensed';
-
 }
 
-  .factory_header{
-    width: 100%;
-    height: 34%;
-    padding: 10px;
-    background-size: 100%;
-    filter: contrast(1.3) brightness(1.3);
-  }
-  .factory_header_bg-oilWell{
-    background-image: url(../img/factoryCards/oilWell.png);
+.factory_header {
+  width: 100%;
+  height: 34%;
+  padding: 10px;
+  background-size: 100%;
+  filter: contrast(1.3) brightness(1.3);
+}
 
-  }
+.factory_header_bg-oilWell {
+  background-image: url(../img/factoryCards/oilWell.png);
+}
 
-    .factory_header_header{
-      font-size: 10px;
-      text-transform: uppercase;
-      font-family: 'Roboto Condensed';
-      color: white;
-      text-shadow: 0px 0px 10px black;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    .factory_header_header-span{
-      /* text-transform: uppercase; */
-      font-weight: bold;
-    }
-    .factory_header_header-buttonsContainer{
-      width: 45px;
-      height: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-    .factory_header_header-button{
-      width: 20px;
-      height: 20px;
-      background-size: cover;
-      -webkit-filter: drop-shadow(0px 0px 5px black);
-      filter: drop-shadow(0px 0px 5px black);
-    }
-    .factory_header_body{
-      display: flex;
-      width: 100%;
-      height: 75%;
-      align-items: center;
-      font-family: 'Roboto';
-      color: white;
-      text-shadow: 0px 0px 10px black;
-      letter-spacing: -0.05em;
+.factory_header_header {
+  font-size: 10px;
+  text-transform: uppercase;
+  font-family: 'Roboto Condensed';
+  color: white;
+  text-shadow: 0px 0px 10px black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.factory_header_header-span {
+  font-weight: bold;
+}
 
-    }
-    .factory_header_body-left{
-      width: 70%;
-      height: 70%;
-      display: flex;
-      align-items: center;
-      font-size: 18px;
-      font-weight: bold;
-      text-transform: uppercase;
-    }
-    .factory_header_body-right{
-      width: 30%;
-      height: 70%;
+.factory_header_header-buttonsContainer {
+  width: 45px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-      display: flex;
-      align-items: center;
-      justify-content: center;
+.factory_header_header-button {
+  width: 20px;
+  height: 20px;
+  background-size: cover;
+  -webkit-filter: drop-shadow(0px 0px 5px black);
+  filter: drop-shadow(0px 0px 5px black);
+}
 
-      font-size: 36px;
-      font-weight: bold;
+.factory_header_body {
+  display: flex;
+  width: 100%;
+  height: 75%;
+  align-items: center;
+  font-family: 'Roboto';
+  color: white;
+  text-shadow: 0px 0px 10px black;
+  letter-spacing: -0.05em;
+}
 
-    }
-  .factory_body{
-    padding: 10px;
-    width: 100%;
-    height: 72%;
-    background-color: #FAF9F8;
-    border-radius: 20px 20px 0px 0px;
-    position: relative;
-    top:-6%;
-    box-shadow: 0px 0px 30px black;
+.factory_header_body-left {
+  width: 70%;
+  height: 70%;
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
 
-  }
-    .factory_body_body-settings{
-      width: 100%;
-      height: 100%;
-    }
+.factory_header_body-right {
+  width: 30%;
+  height: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 36px;
+  font-weight: bold;
+}
 
-    .factory_body_settingsLine{
-      width: 100%;
-      height: 18%;
-      margin-bottom: 2%;
-      border-radius: 10px;
-      box-shadow: 0px 0px 5px rgba(0,0,0,0.1);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+.factory_body {
+  padding: 10px;
+  width: 100%;
+  height: 72%;
+  background-color: #FAF9F8;
+  border-radius: 20px 20px 0px 0px;
+  position: relative;
+  top: -6%;
+  box-shadow: 0px 0px 30px black;
+}
 
-    }
-      .factory_body_settingsLine-left{
-        width: 32%;
-        height: 100%;
-        /* background-color: red; */
-        padding-left: 10px;
-        font-size: 11px;
-        color:#303030;
-        line-height: 0.9em;
-        display: flex;
-        align-items: center;
+.factory_body_body-settings {
+  width: 100%;
+  height: 100%;
+}
 
-      }
-      .factory_body_settingsLine-right{
-        width: 65%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-      }
-      .factory_body_settingsLine-button{
-        font-family: 'Roboto';
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 25px;
-        height: 25px;
-        border:1px solid #D7355C;
-        color:#D7355C;
-        border-radius: 10px;
-      }
-      .factory_body_settingsLine-button:hover{
-        background-color: #D7355C;
-        color:white;
-        border:none;
-      }
-      .factory_body_settingsLine-text{
-        width: 25px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 25px;
-        color:#D7355C;
-      }
-    .factory_body_settingsLine-accept{
-      width: 100%;
-      height: 18%;
-      margin-top: 5%;
-      margin-bottom: 2%;
-      display: flex;
-    }
-      .factory_body_settings_acceptButton{
-        margin: auto;
-        height: 100%;
-        background-color: #D7355C;
-        display: flex;
-        align-items: center;
-        padding: 0px 15%;
-        border-radius: 20px;
-        text-transform: uppercase;
-      }
-      .factory_body_settings_acceptButton-span{
-        color: white;
-        font-family: 'Roboto';
-        font-size: 12px;
-      }
+.factory_body_settingsLine {
+  width: 100%;
+  height: 18%;
+  margin-bottom: 2%;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.factory_body_settingsLine-left {
+  width: 32%;
+  height: 100%;
+  padding-left: 10px;
+  font-size: 11px;
+  color: #303030;
+  line-height: 0.9em;
+  display: flex;
+  align-items: center;
+}
 
+.factory_body_settingsLine-right {
+  width: 65%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
 
+.factory_body_settingsLine-button {
+  font-family: 'Roboto';
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 25px;
+  height: 25px;
+  border: 1px solid #D7355C;
+  color: #D7355C;
+  border-radius: 10px;
+}
 
+.factory_body_settingsLine-button:hover {
+  background-color: #D7355C;
+  color: white;
+  border: none;
+}
 
+.factory_body_settingsLine-text {
+  width: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 25px;
+  color: #D7355C;
+}
 
-  .factory_body_footer{
-    width: 100%;
-    height: 20%;
-    margin-top: 5px;
-    background-color: red;
-  }
+.factory_body_settingsLine-accept {
+  width: 100%;
+  height: 18%;
+  margin-top: 5%;
+  margin-bottom: 2%;
+  display: flex;
+}
 
+.factory_body_settings_acceptButton {
+  margin: auto;
+  height: 100%;
+  background-color: #D7355C;
+  display: flex;
+  align-items: center;
+  padding: 0px 15%;
+  border-radius: 20px;
+  text-transform: uppercase;
+}
 
+.factory_body_settings_acceptButton-span {
+  color: white;
+  font-family: 'Roboto';
+  font-size: 12px;
+}
 
+.factory_body_footer {
+  width: 100%;
+  height: 20%;
+  margin-top: 5px;
+  background-color: red;
+}
 
-
-.factory_product-hole{
+.factory_product-hole {
   width: 28px;
   height: 28px;
   border-radius: 8px;
   box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.25);
   margin-right: 2px;
-
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
 }
-.factory_product-hole-rawStorage{
+
+.factory_product-hole-rawStorage {
   background-color: #ffb6b6;
 }
 
-.factory_body_rawStorage{
+.factory_body_rawStorage {
   width: 100%;
   height: 28px;
   position: relative;
-  top:-30px;
+  top: -30px;
   display: flex;
 }
 
-
-.factory_product-gap{
+.factory_product-gap {
   width: 28px;
   height: 28px;
   border-radius: 8px;
@@ -273,14 +256,13 @@
   background-color: #FAF9F8;
   border: 1px solid #303030;
   margin-right: 2px;
-
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.factory_body_progressBar{
+.factory_body_progressBar {
   width: 100%;
   height: 28px;
   background-color: #E4E4E4;
@@ -290,15 +272,15 @@
   margin-bottom: 5px;
 }
 
-.factory_body_progressBar_scaleContainer{
+.factory_body_progressBar_scaleContainer {
   width: 100%;
   height: 50%;
   position: relative;
-  top:50%;
+  top: 50%;
   display: flex;
 }
 
-.factory_body_progressBar_scale{
+.factory_body_progressBar_scale {
   border-right: 1px solid #606060;
   height: 100%;
   display: flex;
@@ -307,178 +289,177 @@
   justify-content: center;
   font-size: 8px;
 }
-.factory_body_progressBar_scale-first{
+
+.factory_body_progressBar_scale-first {
   width: 28px;
 }
-.factory_body_progressBar_scale-last{
-  border-right:none;
+
+.factory_body_progressBar_scale-last {
+  border-right: none;
 }
-.factory_body_progressBar_productContainer{
+
+.factory_body_progressBar_productContainer {
   width: 18%;
   height: 28px;
   position: relative;
-  top:-50%;
+  top: -50%;
 }
 
-.factory_body_body-production{
+.factory_body_body-production {
   width: 100%;
   height: 52%;
   margin-bottom: 5px;
   display: flex;
   align-items: center;
 }
-.factory_body_body-production-left{
+
+.factory_body_body-production-left {
   width: 60%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.factory_body_ingredientList{
+
+.factory_body_ingredientList {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
 }
-  .factory_body_ingredientList-item{
-    width: 100%;
-    height: 15px;
-    margin-bottom: 2px;
-    display: flex;
-    border-radius: 5px;
-  }
-  .factory_body_ingredientList-item:hover{
-    background-color: #A3D735;
-  }
-  .factory_body_ingredientList-item-selected{
-    background-color: #A3D735;
-  }
-    .factory_body_ingredientList-icon{
-      width: 15px;
-      height: 15px;
-      background-size: cover;
-    }
-    .factory_body_ingredientList-arrow{
-      width: 15px;
-      height: 15px;
-      color: #303030;
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      margin: 0px 4px;
-    }
-    .factory_body_ingredientList-arrow-coast{
-      line-height: 5px;
-      font-size: 7px;
-      margin-top: 1px;
-    }
-    .factory_body_ingredientList-arrow-symbol{
-      line-height: 6px;
-      font-size:17px;
-    }
-    .factory_body_ingredientList-volume{
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 15px;
-      color: #303030;
-      font-size: 9px;
-      letter-spacing: -0.02em;
-    }
 
+.factory_body_ingredientList-item {
+  width: 100%;
+  height: 15px;
+  margin-bottom: 2px;
+  display: flex;
+  border-radius: 5px;
+}
 
-.factory_body_body-production-right{
+.factory_body_ingredientList-item:hover {
+  background-color: #A3D735;
+}
+
+.factory_body_ingredientList-item-selected {
+  background-color: #A3D735;
+}
+
+.factory_body_ingredientList-icon {
+  width: 15px;
+  height: 15px;
+  background-size: cover;
+}
+
+.factory_body_ingredientList-arrow {
+  width: 15px;
+  height: 15px;
+  color: #303030;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 0px 4px;
+}
+
+.factory_body_ingredientList-arrow-coast {
+  line-height: 5px;
+  font-size: 7px;
+  margin-top: 1px;
+}
+
+.factory_body_ingredientList-arrow-symbol {
+  line-height: 6px;
+  font-size: 17px;
+}
+
+.factory_body_ingredientList-volume {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 15px;
+  color: #303030;
+  font-size: 9px;
+  letter-spacing: -0.02em;
+}
+
+.factory_body_body-production-right {
   width: 40%;
   height: 80%;
   display: flex;
 }
-.factory_body_body-production_settings-list{
+
+.factory_body_body-production_settings-list {
   display: flex;
   flex-direction: column-reverse;
   justify-content: space-around;
   align-items: center;
   width: 33%;
   height: 100%;
-  /* border-right: 1px solid rgba(96, 96, 96, 0.2); */
-
 }
-.factory_body_body-production_settings-hole{
+
+.factory_body_body-production_settings-hole {
   width: 14px;
   height: 14px;
   border-radius: 100%;
   box-shadow: inset 1px 1px 3px rgba(0, 0, 0, 0.25);
   margin-left: 1px;
 }
-.factory_body_body-production_settings-gap{
+
+.factory_body_body-production_settings-gap {
   width: 13px;
   height: 13px;
   border-radius: 100%;
-  background-color:#D7355C;
+  background-color: #D7355C;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
   margin-left: 1px;
-
 }
-.factory_body_body-production_settings-text{
+
+.factory_body_body-production_settings-text {
   font-size: 10px;
   text-transform: uppercase;
-  color:#303030;
+  color: #303030;
 }
 
-
-
-
-
-.factory_body_storage{
+.factory_body_storage {
   width: 100%;
-  /* background-color: red; */
   height: 28px;
   display: flex;
 }
 
-.factory_storage-gap{
+.factory_storage-gap {
   width: 28px;
   height: 28px;
   border-radius: 8px;
   margin-right: 2px;
-
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
   background-color: #FAF9F8;
 }
 
-
-.factory_body_productHugeIcon{
+.factory_body_productHugeIcon {
   width: 60px;
   height: 60px;
   background-size: cover;
 }
 
-
-
-
-
-#factory_card_error{
+#factory_card_error {
   pointer-events: auto;
   width: 170px;
   height: 30px;
-  /* background-color: rgba(215, 53, 92, 0.8); */
-
   overflow: hidden;
   position: fixed;
   display: flex;
-  top:82%;
-  left:50%;
-  -webkit-transform:translate(-150%,-50%) scale(1.5) rotateY(10deg);
-  transform:translate(-150%,-50%) scale(1.5) rotateY(10deg);
-
+  top: 82%;
+  left: 50%;
+  -webkit-transform: translate(-150%, -50%) scale(1.5) rotateY(10deg);
+  transform: translate(-150%, -50%) scale(1.5) rotateY(10deg);
   border-radius: 10px;
-  backdrop-filter:blur(10px);
-  -webkit-backdrop-filter:blur(10px);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   font-family: 'Roboto Condensed';
   color: white;
   transition-duration: 4s;
-
 }
-.factory_card_error_icon{
+
+.factory_card_error_icon {
   width: 15%;
   display: flex;
   align-items: center;
@@ -486,7 +467,8 @@
   background-color: rgba(215, 53, 92, 1);
   font-size: 20px;
 }
-.factory_card_error_text{
+
+.factory_card_error_text {
   width: 85%;
   height: 100%;
   display: flex;
@@ -495,15 +477,14 @@
   font-size: 10px;
   padding-left: 5px;
   text-shadow: 0px 0px 4px black;
-
 }
 
-.factory_footer{
+.factory_footer {
   width: 100%;
   height: 75%;
-  background-color:#FAF9F8;
+  background-color: #FAF9F8;
   position: relative;
-  top:-12.5%;
+  top: -12.5%;
   overflow: hidden;
   padding: 0px 10px;
   transition-duration: 0.4s;
@@ -511,47 +492,51 @@
   box-shadow: 0px 0px 8px rgb(0, 0, 0, 0.5);
 }
 
-.factory_footer:hover{
-  top:-79%;
+.factory_footer:hover {
+  top: -79%;
 }
-  .factory_footer_header{
-    align-items: center;
-    display: flex;
-    font-size: 12px;
-    justify-content: center;
-    width: 100%;
-    height: 10%;
-    margin-bottom: 5px;
-    color:#D7355C;
-  }
 
-.factory_footer_body{
+.factory_footer_header {
+  align-items: center;
+  display: flex;
+  font-size: 12px;
+  justify-content: center;
+  width: 100%;
+  height: 10%;
+  margin-bottom: 5px;
+  color: #D7355C;
+}
+
+.factory_footer_body {
   width: 100%;
   height: 80%;
 }
-.factory_footer_body_line{
+
+.factory_footer_body_line {
   width: 100%;
   height: 30px;
   margin-bottom: 5px;
-  box-shadow: 0px 2px 3px rgba(0,0,0,0.4);
+  box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.4);
   border-radius: 40px;
   display: flex;
   align-items: center;
   overflow: hidden;
 }
-.factory_footer_body_line-icon{
+
+.factory_footer_body_line-icon {
   margin: 0px 5px;
   width: 25px;
   height: 25px;
   background-size: cover;
-
 }
-.factory_footer_body_line_buttonsContainer{
-  width:115px;
+
+.factory_footer_body_line_buttonsContainer {
+  width: 115px;
   height: 30px;
   display: flex;
 }
-.factory_footer_body_line_buttonsContainer-button{
+
+.factory_footer_body_line_buttonsContainer-button {
   width: 50%;
   height: 100%;
   display: flex;
@@ -559,46 +544,49 @@
   justify-content: center;
 }
 
-.factory_footer_body_line_buttonsContainer-button:hover{
-  background-color:#A3D735;
+.factory_footer_body_line_buttonsContainer-button:hover {
+  background-color: #A3D735;
 }
 
-.factory_footer_body_line_buttonsContainer-icon{
+.factory_footer_body_line_buttonsContainer-icon {
   width: 30px;
   height: 30px;
   background-size: cover;
 }
-.factory_footer_body_line-body{
+
+.factory_footer_body_line-body {
   width: 90px;
   height: 30px;
   display: flex;
   align-items: center;
 }
-.factory_footer_body_line-cancelButton{
+
+.factory_footer_body_line-cancelButton {
   width: 25px;
   height: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: #D7355C;
-  color:white;
+  color: white;
 }
-.factory_footer_body_line-iconMode{
+
+.factory_footer_body_line-iconMode {
   width: 25px;
   height: 25px;
   margin-right: 5px;
   background-size: cover;
 }
-.factory_footer_body_line-direction{
+
+.factory_footer_body_line-direction {
   width: 60px;
   height: 30px;
   display: flex;
   align-items: center;
-  color:#303030;
+  color: #303030;
   font-size: 8px;
   font-weight: normal;
   font-family: 'Roboto Condensed';
   letter-spacing: -0.05em;
   text-align: center;
-
 }
