--- a/client/css/gameInterface/rooms.css
+++ b/client/css/gameInterface/rooms.css
@@ -1,12 +1,12 @@
-#roomsPage{
+#roomsPage {
   width: 100vw;
   height: 100vh;
   background-color: black;
   perspective: 1000px;
-  -webkit-perspective:1000px;
+  -webkit-perspective: 1000px;
 }
 
-#roomsPageBG{
+#roomsPageBG {
   width: 100%;
   height: 100%;
   position: fixed;
@@ -15,27 +15,24 @@
   background-image: url(../img/pages/roomsBG.png);
   filter: blur(5px) contrast(120%);
 }
-#roomsList{
+
+#roomsList {
   width: 100%;
   height: 80%;
   margin: auto;
   overflow-y: scroll;
   display: flex;
-  /* background-color: rgba(197, 226, 233,0.5); */
   pointer-events: auto;
   transform: rotateX(15deg);
-  border-bottom: 10px solid rgba(185, 202, 207,0.5);
-
+  border-bottom: 10px solid rgba(185, 202, 207, 0.5);
   align-items: center;
-
 }
 
-.room-card{
+.room-card {
   width: 250px;
   height: 300px;
   margin-left: 50px;
   flex: 0 0 auto;
-
   padding: 8px;
   box-shadow: 5px 5px 10px rgb(0 0 0 / 50%);
   background-color: #EAEAEA;
@@ -43,20 +40,15 @@
   color: #303030;
 }
 
-
-
-.room-card-title{
+.room-card-title {
   font-weight: 700;
   font-size: 38px;
   text-transform: uppercase;
 }
 
-
-
-.room-card-property{
+.room-card-property {
   font-weight: 400;
   font-size: 18px;
-
   margin-bottom: 14px;
   width: 100%;
   height: 30px;
@@ -65,12 +57,12 @@
   justify-content: space-around;
 }
 
-.room-card-property-set{
-    display: flex;
-    font-size: 24px;
+.room-card-property-set {
+  display: flex;
+  font-size: 24px;
 }
 
-.room-card-property-set-button{
+.room-card-property-set-button {
   height: 30px;
   width: 30px;
   padding-top: 5px;
@@ -79,54 +71,48 @@
   margin-right: 10px;
 }
 
-.room-card-property-set-value{
+.room-card-property-set-value {
   height: 30px;
   text-align: center;
   font-size: 30px;
   margin-right: 10px;
-
 }
 
-.room-card-property-set-checkBox{
-
+.room-card-property-set-checkBox {
   width: 30px;
   height: 30px;
-  background:#EAEAEA;
+  background: #EAEAEA;
   border: 1px solid #303030;
 }
-.room-card-property-set-checkBox input:checked{
+
+.room-card-property-set-checkBox input:checked {
   width: 24px;
   height: 24px;
-  background:#303030;
+  background: #303030;
   color: #EAEAEA
 }
 
-
-.room-card-button{
+.room-card-button {
   background-color: #303030;
   display: flex;
   width: 80%;
   height: 40px;
   margin: auto;
   margin-top: 40px;
-
 }
-.room-card-button-span{
+
+.room-card-button-span {
   margin: auto;
   font-size: 22px;
-  color:#EAEAEA;
-
+  color: #EAEAEA;
 }
 
-.room-card-string{
+.room-card-string {}
 
-}
-.room-card-button{
+.room-card-button {
   width: 100%;
   height: 40px;
   font-size: 24px;
   display: flex;
-  color:white;
-
-
+  color: white;
 }
