--- a/client/css/master.css
+++ b/client/css/master.css
@@ -1,8 +1,7 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&family=Roboto:wght@100;400;500;700&display=swap');
 
-*{
+* {
   box-sizing: border-box;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -13,32 +12,32 @@
 }
 
 /* ===== Scrollbar CSS ===== */
-  /* Firefox */
-  * {
-    scrollbar-width: auto;
-    scrollbar-color: #303030 rgba(255,255,255,0.1);
-  }
+/* Firefox */
+* {
+  scrollbar-width: auto;
+  scrollbar-color: #303030 rgba(255, 255, 255, 0.1);
+}
 
-  /* Chrome, Edge, and Safari */
-  *::-webkit-scrollbar {
-    width: 2px;
-  }
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 2px;
+}
 
-  *::-webkit-scrollbar-track {
-    background: rgba(255,255,255,0.1);
-  }
+*::-webkit-scrollbar-track {
+  background: rgba(255, 255, 255, 0.1);
+}
 
-  *::-webkit-scrollbar-thumb {
-    background-color: rgba(0,0,0,0.2);
-    border-radius: 0px;
-    border: 0px none #000000;
-  }
+*::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 0px;
+  border: 0px none #000000;
+}
 
+input {
+  outline: none;
+}
 
-input {outline:none;}
-
-
-body{
+body {
   margin: 0;
   padding: 0;
   overflow: hidden;
@@ -46,14 +45,16 @@ body{
   width: 100vw;
   height: 100vh;
 }
-#gameInterface{
+
+#gameInterface {
   width: 100vw;
   height: 100vh;
   pointer-events: none;
   display: flex;
   position: fixed;
 }
-#mobileConsole{
+
+#mobileConsole {
   width: 100vw;
   max-height: 30vh;
   font-size: 25px;
@@ -61,11 +62,11 @@ body{
   background-color: rgba(255, 255, 255, 0.5);
   z-index: 1000;
   bottom: 0px;
-  overflow-y:scroll;
+  overflow-y: scroll;
   padding-left: 25px;
-
 }
-#screen{
+
+#screen {
   position: fixed;
   left: 0;
   top: 0;
@@ -73,15 +74,16 @@ body{
   height: 100vh;
   pointer-events: none;
 }
-#gameSceneNotification{
+
+#gameSceneNotification {
   width: 100vw;
   height: 100vh;
   position: fixed;
   overflow: hidden;
   pointer-events: none;
-
 }
-#renderer{
+
+#renderer {
   outline: none;
   position: fixed;
   left: 0;
@@ -90,7 +92,8 @@ body{
   height: 100vh;
   display: none;
 }
-#errorSection{
+
+#errorSection {
   outline: none;
   position: fixed;
   left: 0;
@@ -99,12 +102,14 @@ body{
   height: 100vh;
   display: flex;
 }
-#errorContainer{
+
+#errorContainer {
   width: 30vw;
   height: 40vh;
   margin: auto;
 }
-#errorText{
+
+#errorText {
   text-align: center;
   font-size: 2vw;
   font-weight: bold;
@@ -113,15 +118,14 @@ body{
   font-style: italic;
 }
 
-.fullSection{
+.fullSection {
   width: 100vw;
   height: 100vh;
   display: flex;
   outline: none;
   position: fixed;
 }
-.buttonSpan{
+
+.buttonSpan {
   margin: auto;
 }
-
-/* REGISTRATION */
