--- a/client/css/gameInterface/product.css
+++ b/client/css/gameInterface/product.css
@@ -72,3 +72,8 @@
 .product-cardboard {
   background-image: url(../img/product/cardboard.png);
 }
+
+
+.product-glass {
+  background-image: url(../img/product/glass.png);
+}
