--- a/client/css/gameInterface/product.css
+++ b/client/css/gameInterface/product.css
@@ -77,3 +77,7 @@
 .product-glass {
   background-image: url(../img/product/glass.png);
 }
+
+.product-cement {
+  background-image: url(../img/product/cement.png);
+}
