--- a/client/css/gameInterface/ceilMenu.css
+++ b/client/css/gameInterface/ceilMenu.css
@@ -187,6 +187,8 @@
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 14px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  transform: scale(0.7);
+  margin: -8px;
 }
 
 .sectorMenu_button_title {
