factory autosending css html

--- a/client/css/gameInterface/icons.css
+++ b/client/css/gameInterface/icons.css
@@ -48,3 +48,11 @@
 .icon-cancel {
   background-image: url(../img/icons/cancel.png);
 }
+
+.icon-list {
+  background-image: url(../img/icons/list.png);
+}
+
+.icon-plus {
+  background-image: url(../img/icons/plus.png);
+}
