--- a/client/css/gameInterface/factory.css
+++ b/client/css/gameInterface/factory.css
@@ -37,8 +37,8 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-150%, -50%) scale(1.2) rotateY(10deg);
-  transform: translate(-150%, -50%) scale(1.2) rotateY(10deg);
+  -webkit-transform: translate(-150%, -50%) scale(1.5) rotateY(10deg);
+  transform: translate(-150%, -50%) scale(1.5) rotateY(10deg);
   overflow: hidden;
   border-radius: 10px;
   box-shadow: 0px 0px 10px black;
@@ -489,7 +489,6 @@
   position: relative;
   top: -12.5%;
   overflow: hidden;
-  padding: 0px 10px;
   transition-duration: 0.4s;
   border-radius: 20px 20px 0px 0px;
   box-shadow: 0px 0px 8px rgb(0, 0, 0, 0.5);
@@ -510,11 +509,106 @@
   color: #D7355C;
 }
 
+
+
 .factory_footer_body {
   width: 100%;
   height: 80%;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2px 10px;
 }
+.factory_footer_body_item{
+  width: 100%;
+  min-height: 30px;
+  box-shadow: 0px 2px 4px rgba(0,0,0,0.3);
+  border-radius: 15px;
+  overflow: hidden;
+  margin-bottom: 5px;
+  flex: 0 0 auto;
 
+}
+.factory_footer_body_item-header{
+  width: 100%;
+  height: 30px;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+  .factory_footer_body_item-header_icon{
+    width: 20px;
+    height: 20px;
+    background-size: cover;
+  }
+  .factory_footer_body_item-header_buttonsContainer{
+    width: 80px;
+    height: 20px;
+    box-shadow: 0px 0px 4px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding-left: 2px;
+    overflow: hidden;
+  }
+  .factory_footer_body_item-header_buttonsContainer-icon{
+    width: 10px;
+    height: 10px;
+    background-size: cover;
+  }
+  .factory_footer_body_item-header_buttonsContainer-button{
+    width: 33px;
+    height: 20px;
+  }
+  .factory_footer_body_item-header_buttonsContainer-button:hover{
+    background-color: #D7355C;
+    display: flex;
+  }
+
+  .factory_footer_body_item-header_buttonsContainer-button-icon{
+    width: 20px;
+    height: 20px;
+    margin: auto;
+    background-size: cover;
+  }
+
+  .factory_footer_body_item_directionsList{
+    width: 100%;
+    padding: 5px;
+    padding-top: 0px;
+  }
+  .factory_footer_body_item_directionsList_item{
+    width: 100%;
+    height: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 4px rgba(0,0,0,0.3);
+    margin-bottom: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 5px;
+  }
+  .factory_footer_body_item_directionsList_item-current{
+    background-color: rgb(163, 215, 53);
+    box-shadow: 0px 0px 4px rgba(163, 215, 53,0.3);
+  }
+  .factory_footer_body_item_directionsList_item-icon{
+    width: 15px;
+    height: 15px;
+    background-size: cover;
+  }
+  .factory_footer_body_item_directionsList_item-text{
+    height: 15px;
+    display: flex;
+    align-items: center;
+    font-size: 6px;
+    letter-spacing: -0.05em;
+  }
+
+/*
 .factory_footer_body_line {
   width: 100%;
   height: 30px;
@@ -592,4 +686,4 @@
   font-family: 'Roboto Condensed';
   letter-spacing: -0.05em;
   text-align: center;
-}
+} */
