--- a/client/css/gameInterface/ceilMenu.css
+++ b/client/css/gameInterface/ceilMenu.css
@@ -139,7 +139,166 @@
   display: flex;
 }
 
-#sectorMenu {
+.sectorMenu_centralButton{
+  position: absolute;
+  left: 50%;
+  top:50%;
+  width: 60px;
+  height: 60px;
+  pointer-events: auto;
+  background-color: rgba(250, 249, 247,0.1);
+  box-shadow: 0px 0px 5px black;
+  border-radius: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translate(-50%,-50%);
+}
+.sectorMenu_centralButton-icon{
+  width: 50px;
+  height: 50px;
+  background-size: cover;
+}
+
+.sectorMenu_menu{
+  width: 600px;
+  height: 200px;
+  position: absolute;
+  left: 50%;
+  bottom: 5%;
+  transform: translate(-50%);
+  filter: drop-shadow(5px 5px 10px rgba(48, 48, 48,0.5));
+
+}
+.sectorMenu_menu-header{
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+  .sectorMenu_menu-header-button{
+    pointer-events: auto;
+
+    width: 50px;
+    height: 50px;
+    background-color: #FAF9F8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+  }
+  .sectorMenu_menu-header-button-icon{
+    width: 40px;
+    height: 40px;
+    background-size: cover;
+  }
+
+.sectorMenu_menu-body{
+  pointer-events: auto;
+  width: 100%;
+  height: 160px;
+  overflow-x: scroll;
+  display: flex;
+  padding-top: 5px;
+}
+  .sectorMenu_menu-card{
+    font-family: 'Roboto Condensed';
+    letter-spacing: -0.05em;
+    width: 120px;
+    height: 150px;
+    background-color: #FAF9F8;
+    flex: 0 0 auto;
+    border-radius: 10px;
+    margin-left: 10px;
+    position: relative;
+    overflow: hidden;
+  }
+  .sectorMenu_menu-card-header{
+    width: 100%;
+    height: 25px;
+    font-family: 'Roboto Condensed';
+    font-size: 9px;
+    letter-spacing: 0em;
+    color: #303030;
+    margin-bottom: -25px;
+    padding-top: 8px;
+    padding-left: 5px;
+    text-transform: uppercase;
+  }
+  .sectorMenu_menu-card-header-span-bold{
+    font-weight: bold;
+  }
+  .sectorMenu_menu-card-image{
+    width: 120px;
+    height: 100px;
+    background-size: cover;
+  }
+  .sectorMenu_menu-card-description{
+    width: 120px;
+    height: 150px;
+    position: relative;
+    top:-100px;
+  }
+  .sectorMenu_menu-card-description-gradient{
+    width: 100%;
+    height: 100px;
+    margin-bottom: -30px;
+    background: linear-gradient(0deg, rgba(250,249,248,0.9) 0%, rgba(250,249,248,0) 70%);
+  }
+  .sectorMenu_menu-card-description-productsList{
+    width: 100%;
+    height: 20px;
+    padding-left: 5px;
+    display: flex;
+    align-items: center;
+  }
+  .sectorMenu_menu-card-description-product{
+    width: 20px;
+    height: 20px;
+    background-size: cover;
+    margin-left: 2px;
+  }
+  .sectorMenu_menu-card-description-title{
+    width: 100%;
+    height: 20px;
+    font-family: 'Roboto Condensed';
+    font-size: 10px;
+    letter-spacing: -0.05em;
+    padding: 0px 5px;
+    color:#303030;
+    margin-bottom: 10px;
+  }
+  .sectorMenu_menu-card-description-button{
+    width: 80%;
+    margin: auto;
+    height: 23px;
+    box-shadow: 0px 0px 5px rgba(48, 48, 48,0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #303030;
+    border-radius: 20px;
+  }
+  .sectorMenu_menu-card-description-button-nonActive{
+    width: 80%;
+    height: 23px;
+
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+
+    box-shadow: 0px 0px 5px rgba(48, 48, 48,0.1);
+    color: #b1b1b1;
+  }
+  .sectorMenu_menu-card-description-button:hover{
+    background-color: #D7355C;
+    color: white;
+  };
+
+/* #sectorMenu {
   display: none;
   z-index: 2;
   margin: auto;
@@ -148,7 +307,6 @@
   -webkit-transform: translateX(25%) rotateX(5deg);
   transform: translateX(25%) rotateX(5deg);
 }
-
 .sectorMenu_Left {
   width: 200px;
   height: 255px;
@@ -255,4 +413,4 @@
 .buildingMenu_card_price {
   width: 100%;
   text-align: right;
-}
+} */
