--- a/client/css/gameInterface/city.css
+++ b/client/css/gameInterface/city.css
@@ -10,7 +10,7 @@
 }
 
 .cityCard{
-  min-width: 420px;
+  width: 420px;
   height: 360px;
   margin: auto;
   overflow: hidden;
@@ -116,16 +116,17 @@
 
 }
 .cityCard_body_list{
-  width: 100%;
-  height: 100%;
+  width: 385px;
+  height: 98%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  overflow-x: scroll;
 }
 .cityCard_body_list-item{
   width: 50px;
   margin: 5px;
   height: 230px;
+  flex: 0 0 auto;
 }
 .cityCard_body_list-item-price{
   font-family: 'Roboto Condensed';
