--- a/client/css/master.css
+++ b/client/css/master.css
@@ -21,15 +21,15 @@
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
   width: 2px;
+  height: 2px;
 }
 
 *::-webkit-scrollbar-track {
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.2);
 }
-
 *::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.2);
-  border-radius: 0px;
+  background-color: rgba(215, 53, 92, 1.0);
+  border-radius: 10px;
   border: 0px none #000000;
 }
 
