--- a/client/css/gameInterface/city.css
+++ b/client/css/gameInterface/city.css
@@ -7,6 +7,9 @@
   perspective: 1000px;
   -webkit-perspective: 1000px;
   display: flex;
+  filter: drop-shadow(0px 0px 10px black);
+  touch-action: manipulation;
+
 }
 
 .cityCard{
@@ -17,7 +20,6 @@
   border-radius: 10px;
   font-family: 'Roboto';
   /* box-shadow: 0px 0px 10px black; */
-  filter: drop-shadow(0px 0px 10px black);
 }
 .cityCard_header{
   width: 100%;
