--- a/client/css/master.css
+++ b/client/css/master.css
@@ -9,6 +9,9 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+
+  /* disable double tap zoom */
+  touch-action: manipulation;
 }
 
 /* ===== Scrollbar CSS ===== */
