--- a/client/css/gameInterface/images.css
+++ b/client/css/gameInterface/images.css
@@ -5,3 +5,9 @@
 .image-waterStation_a {
   background-image: url(../img/images/waterStation_a.png);
 }
+.image-sandMine_a {
+  background-image: url(../img/images/sandMine_a.png);
+}
+.image-oilWell_a {
+  background-image: url(../img/images/oilWell_a.png);
+}
