--- a/client/css/gameInterface/images.css
+++ b/client/css/gameInterface/images.css
@@ -11,3 +11,7 @@
 .image-oilWell_a {
   background-image: url(../img/images/oilWell_a.png);
 }
+
+.image-goldMill_a {
+  background-image: url(../img/images/goldMill_a.png);
+}
