tutorial without autosending

--- a/client/css/gameInterface/tutorial.css
+++ b/client/css/gameInterface/tutorial.css
@@ -179,3 +179,9 @@
 .tutorialSection-image-factory_4{
   background-image: url(../img/tutorial/factory_4.png);
 }
+.tutorialSection-image-factory_5{
+  background-image: url(../img/tutorial/factory_5.png);
+}
+.tutorialSection-image-factory_6{
+  background-image: url(../img/tutorial/factory_6.png);
+}
